# planetfall

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  DEV_LOG.md  LICENSE  README.md  pyproject.toml
assets/: De_Tomaso_P72_2020.mtl  FullBody.mtl  README.md
assets/NightSkyHDRI009_4K/: NightSkyHDRI009_4K.blend  NightSkyHDRI009_4K.tres
assets/models/asteroids/: Asteroid_1.bam  Asteroid_1.mtl  Rocky_Asteroid_2.bam  Rocky_Asteroid_2.mtl  Rocky_Asteroid_3.bam  Rocky_Asteroid_3.mtl  Rocky_Asteroid_4.bam  Rocky_Asteroid_4.mtl  Rocky_Asteroid_5.bam  Rocky_Asteroid_5.mtl  Rocky_Asteroid_6.bam  Rocky_Asteroid_6.mtl
assets/models/coins/: coin.bam
barproj/: __init__.py  cli.py
barproj/game/: config.py  runtime.py  scene.py
fooproj/: __init__.py  cli.py
fooproj/game/: __init__.py  config.py  runtime.py  scene.py
planetfall/: __init__.py  cli.py
planetfall/game/: __init__.py  config.py  runtime.py  runtime_animation.py  runtime_assets.py  runtime_audio.py  runtime_backdrop.py  runtime_camera.py  runtime_collisions.py  runtime_colors.py  runtime_controls.py  runtime_entities.py  runtime_fx.py  runtime_perf.py  runtime_postfx.py  runtime_random.py  runtime_spawn.py  runtime_spawn_coins.py  runtime_spawn_obstacles.py  runtime_spawn_powerups.py  runtime_state.py  runtime_ui.py  scene.py  scene_base.py  scene_coins.py  scene_obstacles.py
scripts/: capture-game.sh  capture-window.sh  convert-assets.sh  convert-audio-background-music-to-ogg.sh  convert-audio-sfx-to-wav.sh  convert-models-to-bam.py  convert-skyboxes-to-txo.py  copy-bam-cache.sh  debug-startup.sh  full-lint.sh
tests/: __init__.py  test_camera_autoyaw.py  test_cli.py  test_config.py  test_controls_axes.py  test_controls_motion.py  test_postfx.py  test_runtime_animation.py  test_runtime_assets.py  test_runtime_asteroids.py  test_runtime_audio.py  test_runtime_auto_yaw.py  test_runtime_camera.py  test_runtime_coins.py  test_runtime_collisions.py  test_runtime_colors.py  test_runtime_controls.py  test_runtime_controls_axes.py  test_runtime_controls_motion.py  test_runtime_fx.py  test_runtime_postfx.py  test_runtime_random.py  test_runtime_recovery.py  test_runtime_spawn.py  test_runtime_spawn_coins.py  test_runtime_spawn_obstacles.py  test_runtime_spawn_powerups.py  test_runtime_state.py  test_runtime_ui.py  test_scene.py  test_scene_coins.py  test_scene_obstacles.py
